--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "file-saver": "^2.0.5",
     "grommet": "^2.29.1",
     "grommet-icons": "^4.8.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
